# aldus

./: .dockerignore  .gitignore  Dockerfile  README.md  SETUP_GUIDE.md  app.py  pyproject.toml  requirements.txt  test.py  test2.py
aldus/: app.py
aldus/templates/: base.html  compile.html  index.html  library.html  progress.html
examples/input/: emma.txt  moby_dick.txt
scripts/: __init__.py  latex_utils.py  main.py  text_utils.py  translator.py
templates/: index.html
