[project]
name = "aldus"
version = "0.1.0"
description = "Bilingual Bookmaker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jieba>=0.42.1",
    "flask>=3.1.0",
    "openai>=1.72.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aldus"]